--- a/views/orders/index.erb
+++ b/views/orders/index.erb
@@ -3,8 +3,11 @@
 		<% @orders.each do |order| %>
   				
     	<h5><%= order.venue %> at <%= order.location %></h5>
-    	<h4><%= order.drinks_1 %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
-    	<p>by <%= order.firstname %></p>
+    	<h4><%= order.drinks_1 %></h4>
+      <h4><%= order.drinks_2 %></h4>
+      <h4><%= order.drinks_3 %></h4>
+      <h4><%= order.drinks_4 %></h4>
+    	<p>by <%= order.firstname %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></p>
     	<hr>
   	<% end %>
 		
