--- a/views/orders/show.erb
+++ b/views/orders/show.erb
@@ -3,8 +3,11 @@
 <div class="row-fluid" style="background: #555555; color: #f9f9f9">
 	<div style="padding:10px;" class="span12">
 		<h5><%= @order.venue %> at <%= @order.location %></h5>
-  	<h4><%= @order.drinks_1 %> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></h4>
-  	<p><a href="/user/<%= @order.phone %>">Order <%= @order.id.to_s.rjust(2, "0")[-2..-1] %> by <%= @order.firstname %> <%= @order.lastname %></a></p>
+  	<h4><%= @order.drinks_1 %></h4>
+    <h4><%= @order.drinks_2 %></h4>
+    <h4><%= @order.drinks_3 %></h4>
+    <h4><%= @order.drinks_4 %></h4>
+  	<p><a href="/user/<%= @order.phone %>">Order <%= @order.id.to_s.rjust(2, "0")[-2..-1] %> by <%= @order.firstname %> <%= @order.lastname %></a> <%= ' | <i class="icon-eye-open"></i>' unless @order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless @order.fulfilled_at.nil? %></p>
   </div>
 </div>
 
