--- a/views/user/show.erb
+++ b/views/user/show.erb
@@ -3,8 +3,11 @@
   <% @orders.each do |order| %>
           
     <h5><%= order.venue %> <%= order.table %></h5>
-    <h4><%= order.drinks_1 %> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></h4>
-    <p><a href="/orders/<%= order.id %>">Order <%= order.id %> by <%= order.firstname %> <%= order.lastname %></a></p>
+    <h4><%= order.drinks_1 %></h4>
+    <h4><%= order.drinks_2 %></h4>
+    <h4><%= order.drinks_3 %></h4>
+    <h4><%= order.drinks_4 %></h4>
+    <p><a href="/orders/<%= order.id %>">Order <%= order.id %> by <%= order.firstname %> <%= order.lastname %></a> <%= ' | <i class="icon-eye-open"></i>' unless order.received_at.nil? %> <%= '<i class="icon-glass"></i>' unless order.fulfilled_at.nil? %></p>
     <hr>
   <% end %>
 
