--- a/views/food/menu.erb
+++ b/views/food/menu.erb
@@ -1,7 +1,13 @@
-<h1><%= @venue.name %>'s Items</h1> <br />
+<h2><%= @venue.name %>'s Items</h2>
+  <hr>
+  <% @item.each do |item| %>
+    <div class="item">
+      <h3><%= item.name %> - <%= item.price %></h3>
+      <p><%= item.description %></p>
+    </div>
+    <hr>
+  <% end %>
 
-        <% @item.each do |item| %>
-          <h3><%= item.name %> - <%= item.price %></h3>
-          <p><%= item.description %></p>
-          <hr>
-        <% end %>
+<script>
+
+</script>
