--- a/views/mprinter.erb
+++ b/views/mprinter.erb
@@ -5,5 +5,7 @@
 
   <h1><a href='/mprinter/add_device'>Add MPrinter</a></h1>
 
+  <h1><a href='/mprinter/confirm_device'>Confirm MPrinter</a></h1>
+
 </div>
 
