Fixed the stripe form

--- a/views/chargeform.erb
+++ b/views/chargeform.erb
@@ -27,8 +27,8 @@
     <script src="https://checkout.stripe.com/v2/checkout.js" 
     class="stripe-button"
     data-key="<%= settings.publishable_key %>" 
-    data-amount=pennies
-    data-description=
+    data-amount="2400"
+    data-description="food"
     data-name="restlessnapkin"
     data-image="https://si0.twimg.com/profile_images/1104245949/restless_napkin_avatar.png">
     </script>
