--- a/views/checkout.erb
+++ b/views/checkout.erb
@@ -1,6 +1,6 @@
 <div class='alert alert-info'>Verify your location listed below is correct then click to close.</div>
 
-<h3><%= @location %></h3>
+<h3>Location:<%= @location %></h3>
 
 <form action='/location/change' method='post' class="form-horizontal">
     <p><input class="btn btn-large btn-info" type='submit' value='Change Location'></p>
