--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   	<title>restlessnapkin</title>
     <script src="/vendor/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-
+    <script src="/vendor/knockout.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/vendor/fontawesome/css/font-awesome.min.css">
